
2014-09-21  Petasis George  <petasis@iit.demokritos.gr>
	* CMakeLists.txt:
	* configure.in: Updated installed files.

	* demos/basic.tcl:
	* demos/dndSpy.tcl:
	* demos/simple_target.tcl: Bug fixes.

	* library/tkdnd.tcl:
	* library/tkdnd_macosx.tcl:
	* library/tkdnd_unix.tcl: Various bug fixes.

	* win/OleDND.h:
	* win/TkDND_OleDND.cpp:
	* library/tkdnd_windows.tcl: Changed implementation to re-use the
	generic implementation.

	* library/tkdnd_generic.tcl: Added a new "generic" implementation, with
	the aim to be re-used by all supported platforms.

2014-08-19  Petasis George  <petasis@iit.demokritos.gr>
	* unix/TkDND_XDND.c:
	* win/OleDND.h: Corrected behaviour when mouse drags over overlapping
	windows. Bug reported by Csaba Nemethi.

2014-08-13  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_windows.tcl:
	* library/tkdnd.tcl:
	* library/tkdnd_unix.tcl:
	* library/tkdnd_macosx.tcl:
	* macosx/macdnd.m: Added support for complex sources under OS X.

	* CMakeLists.txt: A few fixes for OS X.

	* demos/complex_source.tcl:
	* demos/simple_source.tcl: Ensure returned paths are absolute (to avoid
	warnings under OS X).

2014-08-06  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_unix.tcl: Added support for sources with multiple
	and (incompatible) types under Unix. Completed implementation started
	on 2014-01-05 for Windows. OS X support is still pending.

	* unix/TkDND_XDND.c: Replaced calls to (deprecated)
	XKeycodeToKeysym(), with calls to XGetKeyboardMapping().

2014-08-04  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_unix.tcl: Fixed a bug where successive drags may
	be canceled, by a delayed XDNDFinished event, which is scheduled by
	xdnd::_SendXdndDrop to occur after 10 seconds (as a protection against
	a failed selection transfer by the client).
	Bug reported by Csaba Nemethi.

2014-01-05  Petasis George  <petasis@iit.demokritos.gr>
	* doc/tkDND.n: Updated the man page.

	* demos/complex_source.tcl: